# baml

./: CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  root-wasm32.code-workspace  root.code-workspace  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-python-release.reusable.yaml  build-ruby-release.reusable.yaml  build-typescript-release.reusable.yaml  preview-docs.yml  release.yml
docs/: README.md
docs/old/: docs.yml
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/baml-lib/baml/: Cargo.toml  (+1 more)
engine/baml-lib/baml-types/: Cargo.toml
engine/baml-lib/baml-types/src/: baml_value.rs  constraint.rs
engine/baml-lib/baml-types/src/field_type/: mod.rs
engine/baml-runtime/: Cargo.toml
engine/baml-schema-wasm/: Cargo.toml
engine/bstd/: Cargo.toml
engine/bstd/src/: dedent.rs  lib.rs  project_fqn.rs  random_word_id.rs
engine/cli/: Cargo.toml
engine/language_client_codegen/: Cargo.toml
engine/language_client_python/: Cargo.toml  pyproject.toml
engine/language_client_ruby/: baml.gemspec
engine/language_client_typescript/: Cargo.toml  package.json  pnpm-lock.yaml
fern/: docs.yml
fern/01-guide/: contact.mdx  what-are-function-definitions.mdx  what-is-baml_client.mdx  what-is-baml_src.mdx
fern/02-examples/: interactive-examples.mdx
fern/03-reference/: generator.mdx  overview.mdx
fern/assets/: styles.css
fern/pages/: changelog.mdx  welcome.mdx
fern/snippets/: setting-env-vars.mdx  supports-streaming-openai.mdx  supports-streaming.mdx
integ-tests/baml_src/: clients.baml  generators.baml
integ-tests/python/: pyproject.toml  report.html
integ-tests/ruby/: test_functions.rb
integ-tests/typescript/: test-report.html
tools/: build
tools/versions/: engine.cfg  integ-tests.cfg  python.cfg  ruby.cfg  typescript.cfg  vscode.cfg
typescript/: pnpm-lock.yaml  turbo.json
typescript/fiddle-proxy/: package-lock.json  package.json
(+316 files in other folders)
