[package]
edition = "2021"
name = "baml-types"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
derive_builder.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
minijinja.workspace = true
log.workspace = true

[dependencies.indexmap]
workspace = true
optional = true


[features]
default = ["stable_sort"]
stable_sort = ["indexmap"]
